# ustcdays

./: .gitignore  Cargo.toml  README.md
src/: cli_frontend.rs  conditions.rs  debug.rs  events.rs  frontend.rs  game.rs  main.rs  map_system.rs  player.rs  time_system.rs  triggers.rs
src/data/: game_data.toml
src/events/: conditions.rs  events.rs  mod.rs  modifier.rs  triggers.rs
src/frontend/: assets.rs  frontend.rs  mod.rs
src/systems/: asset_system.rs  map_system.rs  mod.rs  time_system.rs
wasted/: cli_frontend.rs
