[package]
name = "ustcdays"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
env_logger = "0.11.5"
image = "0.25.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
anyhow = "1.0.93"
toml = "0.8.19"
